correct main content alignment

--- a/css/global.css
+++ b/css/global.css
@@ -53,12 +53,11 @@ header, main, footer {
 }
 
 main {
+  padding:2em 0;
   border-top: .5em solid #fff8f0;
   border-left: .5em solid #fff8f0;
   border-right: .5em solid #fff8f0;
   border-bottom: 0;}
-  main ul {
-    max-width: 500px;}
 
   main ul li {
     text-align: center;} 
